# ai-cad-compiler

./: .gitignore  CHANGELOG.md  GITHUB_PAGES_SETUP.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-pages.yml
docs/: README.md  app.js  index.html  style.css
src/aicad/: __init__.py  cli.py  compile_cadquery.py  compile_fs.py  compose.py  dsl_parse.py  init.py  ir.py  refine.py  shell.py  test_bracket_fs.py  test_ir_roundtrip.py  validate.py  verify.py
src/aicad_compiler.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_cli.py  test_validate_dfm.py  test_web_app.py
tests/data/: prompts.txt
tools/: preview_cq.py  run_suite.py
