[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aicad-compiler"
version = "0.1.0"
description = "Pure-function language-to-CAD compiler (IR -> FeatureScript/CadQuery) with decorator shells"
requires-python = ">=3.10"
dependencies = ["typing-extensions>=4.7", "dataclasses-json>=0.6.7"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
